--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -962,10 +962,10 @@ p3 <- ggplot(bar_feat_bp_ovl) + aes(x=type, y=pct, fill=type) + geom_bar(stat='i
 ```{r operon_overlap_stats_plot, dev=c("svg", "png", "pdf"), fig.ext=c("svg", "png", "pdf")}
 rbind(oki_feat_bp_ovl, osa_feat_bp_ovl, bar_feat_bp_ovl) |>
   ggplot() +
-  aes(pct, type, col = type, pch = species, size = 2) +
-  geom_point() +
-  scale_y_discrete("") +
-  scale_x_continuous("Percentage of features overlaping a breakpoint region") +
+  aes(type, pct, fill = species) +
+  geom_bar(stat = "identity", position="dodge")  +
+  scale_y_continuous("Percent features overlaping breakpoint regions") +
+  scale_x_discrete("Feature type") +
   theme_bw()
 ```
 
